--- a/views/adminRegister.html
+++ b/views/adminRegister.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Colorlib Templates">
 
     <!-- Title Page-->
-    <title>网上选课系统-注册</title>
+    <title>网上选课系统-管理员注册</title>
 
     <!-- Icons font CSS-->
     <link href="/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -31,22 +31,22 @@
         <div class="wrapper wrapper--w680">
             <div class="card card-1">
                 <div class="card-body">
-                    <h2 class="title">欢迎注册</h2>
+                    <h2 class="title">管理员-欢迎注册</h2>
                     <form method="POST" id="register_form">
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="姓名" name="name" id="name" required minlength="2" maxlength="5">
+                            <input class="input--style-1" type="text" placeholder="姓名" name="adminName" id="name" required minlength="2" maxlength="5">
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="学号" name="stuId" id="stuId" required minlength="11" maxlength="11">
+                            <input class="input--style-1" type="text" placeholder="教师号" name="adminId" id="adminId" required minlength="4" maxlength="6">
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="班级" name="class" id="class" required>
+                            <input class="input--style-1" type="text" placeholder="所管班级" name="adminCourse" id="class" required>
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="password" placeholder="密码" name="password" id="password" required minlength="6" maxlength="20">
+                            <input class="input--style-1" type="password" placeholder="密码" name="adminPassword" id="password" required minlength="4" maxlength="20">
                         </div>
                             <button class="btn btn--radius btn--green" type="submit">提交</button>
-                            已有账号？<a href="/login" style="text-decoration: none; color: rgb(199, 32, 149);">点击登录</a>
+                            已有账号？<a href="/adminLogin" style="text-decoration: none; color: rgb(199, 32, 149);">点击登录</a>
                         </div>
                     </form>
                 </div>
@@ -56,14 +56,13 @@
 
 
 
-
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script>
         $('#register_form').on('submit',function(event){
             event.preventDefault();
             var formData = $(this).serialize();
             $.ajax({
-                url:'/register',
+                url:'/adminRegister',
                 type:'post',
                 data:formData,
                 dataType:'json',
@@ -71,9 +70,9 @@
                     var err_code = data.err_code;
                     if(err_code === 0 ){
                         window.alert('注册成功，请登录');
-                        window.location.href = '/login';
+                        window.location.href = '/adminLogin';
                     }else if(err_code === 1){
-                        window.alert('此学号已经注册了账号')
+                        window.alert('此账号已经注册了账号')
                     }else if(err_code === 500){
                         window.alert('服务器忙，请稍后重试');
                     }
