--- a/views/index_admin.html
+++ b/views/index_admin.html
@@ -31,21 +31,21 @@
       </li>
     </ul>
     <ul class='layui-nav layui-layout-right'>
-      {{ if student }}
+      {{ if admin }}
       <li class='layui-nav-item'>
         <a href='javascript:;'>
           <img src='/public/img/图书.png' style='width: 30px; border-radius: 50%;'>
-          欢迎你：{{student.name}}
+          欢迎你：{{admin.adminName}}
         </a>
         <dl class='layui-nav-child'>
           <dd><a href=''>基本资料</a></dd>
           <dd><a href=''>安全中心</a></dd>
-          <dd><a href='/logout'>退出</a></dd>
+          <dd><a href='/adminLogout'>退出</a></dd>
         </dl>
       </li>
       {{ else }}
-      <li class='layui-nav-item'><a href='/login'>登录</a></li>
-      <li class='layui-nav-item'><a href='/register'>注册</a></li>
+      <li class='layui-nav-item'><a href='/adminLogin'>登录</a></li>
+      <li class='layui-nav-item'><a href='/adminRegister'>注册</a></li>
       {{ /if }}
     </ul>
   </div>
@@ -62,32 +62,6 @@
             <dd><a href='https://www.cnki.net/'>中国知网</a></dd>
           </dl>
         </li>
-        <li class='layui-nav-item'>
-            <a href='javascript:;'>课程类别分类选课</a>
-            <dl class='layui-nav-child'>
-              <dd><a href='/courses/computer'>计算机类</a></dd>
-              <dd><a href='/courses/art'>摄影艺术类</a></dd>
-              <dd><a href='/courses/sport'>体育运动类</a></dd>
-              <dd><a href='/courses/scient'>科学技术类</a></dd>
-              <dd><a href='/courses/knowledge'>百科知识类</a></dd>
-            </dl>
-          </li>
-          <li class='layui-nav-item'>
-            <a href='javascript:;'>按照老师分类选课</a>
-            <dl class='layui-nav-child'>
-              <dd><a href='/courses/jia'>贾老师</a></dd>
-              <dd><a href='/courses/zuo'>左老师</a></dd>
-              <dd><a href='/courses/yue'>月老师</a></dd>
-              <dd><a href='/courses/hua'>华老师</a></dd>
-              <dd><a href='/courses/shan'>山老师</a></dd>
-              <dd><a href='/courses/li'>李老师</a></dd>
-              <dd><a href='/courses/xiao'>晓老师</a></dd>
-              <dd><a href='/courses/jiang'>江老师</a></dd>
-            </dl>
-          </li>
-        <li class='layui-nav-item'><a href='/recommend'>推荐选课</a></li>
-        <li class='layui-nav-item'><a href='/can'>可选课程</a></li>
-        <li class='layui-nav-item'><a href='/courses/rebuild'>重修类课程选课</a></li>
         <li class='layui-nav-item'><a href='/courses/add'>发布课程</a></li>
       </ul>
     </div>
@@ -97,7 +71,7 @@
   <div class='layui-body'>
     <!-- 内容主体区域 -->
     <div style='padding: 15px;' id='content'>
-      {{if student}}
+      {{if admin}}
       <h1 style='font-weight: bold;'>待选课程</h1>
       <table class='layui-table' class='layui-hide' id='test'>
           <colgroup>
@@ -118,8 +92,8 @@
               <th>已选名额</th>
               <th>可选名额</th>
               <th>是否选择</th>
-              <!-- <th>是否编辑</th>
-              <th>是否删除</th> -->
+              <th>是否编辑</th>
+              <th>是否删除</th>
             </tr> 
           </thead>
           <tbody>
@@ -136,15 +110,15 @@
               <td>{{0}}</td>
               <td>{{$value.course_quota}}</td>
               <td><button class='layui-btn layui-btn-normal'>选择</button></td>
-              <!-- <td><button class='layui-btn layui-btn-normal'>编辑</button></td>
-              <td><button class='layui-btn layui-btn-normal'>删除</button></td> -->
+              <td><button class='layui-btn layui-btn-normal'>编辑</button></td>
+              <td><button class='layui-btn layui-btn-normal'>删除</button></td>
               
             </tr>
             {{/each}}
           </tbody>
         </table>
         {{else}}
-        <h1 style='font-weight: bold;'>待选课程(登陆后可选)</h1>
+        <h1 style='font-weight: bold;'>待选课程(登陆后可修改)</h1>
       <table class='layui-table' class='layui-hide' id='test'>
           <colgroup>
             <col width='150'>
@@ -200,37 +174,5 @@ layui.use('element', function(){
 });
 </script>
 <script src='../node_modules/jquery/dist/jquery.js'></script>
-<!-- //此处是开启可分页的表格 -->
-<!-- <script>
- $(function(){
-    //ajax请求数据库信息显示到表格
-  $.ajax({
-    url:'/courseData',
-    type:'GET',
-    dataType:'json',
-    success:function(data){
-      layui.use('table', function(){
-    var table = layui.table;
-    table.render({
-      elem: '#test'
-      ,data:data
-      ,cols: [[
-        {field:'_id', title: '课程序号', sort: true}
-        ,{field:'course_name', title: '课程名称'}
-        ,{field:'course_describe',title: '课程描述'}
-        ,{field:'course_teacher', title: '授课老师'}
-        ,{field:'course_study_time', title: '总学时', sort: true}
-        ,{field:'course_type', title: '课程类型'}
-        ,{field:'course_credit',  title: '学分', sort: true}
-        ,{field:'course_quota',  title: '总计名额', sort: true}
-        ,{field:'course_quota', title: '可选名额', sort: true}
-      ]]
-      ,page: true
-    });
-  });
-    }
-  })
- })
-</script> -->
 </body>
 </html>
