完成了删除学生的操作，优化了页面逻辑

--- a/views/CRUDCourses/add.html
+++ b/views/CRUDCourses/add.html
@@ -1,5 +1,6 @@
-{{extend '../_layouts/home.html'}}
+{{extend '../_layouts/adminhome.html'}}
 {{block 'body-content'}}
+<h1 style='font-weight: bold;'>发布新课程</h1>
 <form class="layui-form" action="/courses/add" method="post">
     <div class="layui-form-item">
       <label class="layui-form-label">课程名称</label>
